cp3/parser.output
Terminals unused in grammar

    LAMBDA


Grammar

    0 $accept: program $end

    1 newline_or_stmt_star: %empty
    2                     | newline_or_stmt_star NEWLINE
    3                     | newline_or_stmt_star stmt

    4 opt_par_arglist: %empty
    5                | LPAR RPAR
    6                | LPAR arglist RPAR

    7 decorator_plus: decorator
    8               | decorator_plus decorator

    9 opt_arrow_test: %empty
   10               | ARROW test

   11 opt_type_comment: %empty
   12                 | TYPE_COMMENT

   13 opt_comma: %empty
   14          | COMMA

   15 opt_colon_test: %empty
   16               | COLON test

   17 opt_semi: %empty
   18         | SEMICOLON

   19 assing_yield_or_test_plus: EQUAL yield_expr
   20                          | EQUAL testlist_star_expr
   21                          | assing_yield_or_test_plus EQUAL yield_expr
   22                          | assing_yield_or_test_plus EQUAL testlist_star_expr

   23 opt_assing_yield_or_test: %empty
   24                         | EQUAL yield_expr
   25                         | EQUAL testlist_star_expr

   26 opt_as_name: %empty
   27            | AS NAME

   28 comma_import_as_name_star: %empty
   29                          | comma_import_as_name_star COMMA import_as_name

   30 comma_dotted_as_name_star: %empty
   31                          | comma_dotted_as_name_star COMMA dotted_as_name

   32 dot_name_star: %empty
   33              | dot_name_star DOT NAME

   34 comma_name_star: %empty
   35                | comma_name_star COMMA NAME

   36 opt_comma_test: %empty
   37               | COMMA test

   38 elif_test_suite_plus: ELIF namedexpr_test COLON suite
   39                     | elif_test_suite_plus ELIF namedexpr_test COLON suite

   40 opt_else_suite: %empty
   41               | ELSE COLON suite

   42 comma_with_item_star: %empty
   43                     | comma_with_item_star COMMA with_item

   44 opt_as_expr: %empty
   45            | AS expr

   46 opt_test_as_name: %empty
   47                 | test opt_as_name

   48 stmt_plus: stmt
   49          | stmt_plus stmt

   50 opt_await: %empty
   51          | AWAIT

   52 trailer_plus: trailer
   53             | trailer_plus trailer

   54 opt_test: %empty
   55         | test

   56 opt_sliceop: %empty
   57            | sliceop

   58 comma_dict1_star: %empty
   59                 | comma_dict1_star COMMA test COLON test
   60                 | comma_dict1_star COMMA DOUBLESTAR expr

   61 except_suite_plus: except_clause COLON suite
   62                  | except_suite_plus except_clause COLON suite

   63 opt_finally_suite: %empty
   64                  | FINALLY COLON suite

   65 program: file_input

   66 file_input: newline_or_stmt_star ENDMARKER

   67 decorator: AT dotted_name opt_par_arglist NEWLINE

   68 decorators: decorator_plus

   69 decorated: decorators classdef
   70          | decorators funcdef
   71          | decorators async_funcdef

   72 async_funcdef: ASYNC funcdef

   73 funcdef: DEF NAME parameters opt_arrow_test COLON opt_type_comment func_body_suite

   74 parameters: LPAR RPAR
   75           | LPAR arguments RPAR

   76 arguments: argument COMMA arguments
   77          | argument

   78 argument: tfpdef EQUAL test
   79         | tfpdef

   80 tfpdef: NAME opt_colon_test

   81 stmt: simple_stmt
   82     | compound_stmt

   83 simple_stmt: small_stmt opt_semi NEWLINE

   84 small_stmt: expr_stmt
   85           | del_stmt
   86           | pass_stmt
   87           | flow_stmt
   88           | import_stmt
   89           | global_stmt
   90           | nonlocal_stmt
   91           | assert_stmt

   92 expr_stmt: testlist_star_expr annassign
   93          | testlist_star_expr augassign yield_expr
   94          | testlist_star_expr augassign testlist
   95          | testlist_star_expr
   96          | testlist_star_expr assing_yield_or_test_plus opt_type_comment

   97 annassign: COLON test opt_assing_yield_or_test

   98 testlist_star_expr: test opt_comma

   99 augassign: PLUSEQUAL
  100          | MINUSEQUAL
  101          | STAREQUAL
  102          | ATEQUAL
  103          | SLASHEQUAL
  104          | PERCENTEQUAL
  105          | AMPEREQUAL
  106          | VBAREQUAL
  107          | CIRCUMFLEXEQUAL
  108          | LEFTSHIFTEQUAL
  109          | RIGHTSHIFTEQUAL
  110          | DOUBLESTAREQUAL
  111          | DOUBLESLASHEQUAL

  112 del_stmt: DEL exprlist

  113 pass_stmt: PASS

  114 flow_stmt: break_stmt
  115          | continue_stmt
  116          | return_stmt
  117          | raise_stmt
  118          | yield_stmt

  119 break_stmt: BREAK

  120 continue_stmt: CONTINUE

  121 return_stmt: RETURN testlist_star_expr
  122            | RETURN

  123 yield_stmt: yield_expr

  124 raise_stmt: RAISE
  125           | RAISE test
  126           | RAISE test FROM test

  127 import_stmt: import_name
  128            | import_from

  129 import_name: IMPORT dotted_as_names

  130 import_from: FROM from_part IMPORT import_part

  131 from_part: DOT
  132          | ELLIPSIS
  133          | dotted_name

  134 import_part: STAR
  135            | LPAR import_as_names RPAR
  136            | import_as_names

  137 import_as_name: NAME opt_as_name

  138 dotted_as_name: dotted_name opt_as_name

  139 import_as_names: import_as_name comma_import_as_name_star opt_comma

  140 dotted_as_names: dotted_as_name comma_dotted_as_name_star

  141 dotted_name: NAME dot_name_star

  142 global_stmt: GLOBAL NAME comma_name_star

  143 nonlocal_stmt: NONLOCAL NAME comma_name_star

  144 assert_stmt: ASSERT test opt_comma_test

  145 compound_stmt: if_stmt
  146              | while_stmt
  147              | for_stmt
  148              | try_stmt
  149              | with_stmt
  150              | funcdef
  151              | classdef
  152              | decorated
  153              | async_stmt

  154 async_stmt: ASYNC funcdef
  155           | ASYNC with_stmt
  156           | ASYNC for_stmt

  157 if_stmt: IF namedexpr_test COLON suite elif_test_suite_plus opt_else_suite
  158        | IF namedexpr_test COLON suite opt_else_suite

  159 while_stmt: WHILE namedexpr_test COLON suite ELSE COLON suite
  160           | WHILE namedexpr_test COLON suite

  161 for_stmt: FOR exprlist IN testlist COLON opt_type_comment suite ELSE COLON suite
  162         | FOR exprlist IN testlist COLON opt_type_comment suite

  163 try_stmt: TRY COLON suite except_suite_plus opt_else_suite opt_finally_suite
  164         | TRY COLON suite FINALLY COLON suite

  165 with_stmt: WITH with_item comma_with_item_star COLON opt_type_comment suite

  166 with_item: test opt_as_expr

  167 except_clause: EXCEPT opt_test_as_name

  168 suite: simple_stmt
  169      | NEWLINE INDENT stmt_plus DEDENT

  170 namedexpr_test: test

  171 test: or_test
  172     | or_test IF or_test ELSE test

  173 test_nocond: or_test

  174 or_test: and_test OR or_test
  175        | and_test

  176 and_test: not_test AND and_test
  177         | not_test

  178 not_test: NOT not_test
  179         | comparison

  180 comparison: expr LESS comparison
  181           | expr GREATER comparison
  182           | expr EQEQUAL comparison
  183           | expr GREATEREQUAL comparison
  184           | expr LESSEQUAL comparison
  185           | expr NOTEQUAL comparison
  186           | expr IN comparison
  187           | expr NOT IN comparison
  188           | expr IS comparison
  189           | expr IS NOT comparison
  190           | expr

  191 expr: xor_expr VBAR expr
  192     | xor_expr

  193 xor_expr: and_expr CIRCUMFLEX xor_expr
  194         | and_expr

  195 and_expr: shift_expr AMPER and_expr
  196         | shift_expr

  197 shift_expr: arith_expr LEFTSHIFT shift_expr
  198           | arith_expr RIGHTSHIFT shift_expr
  199           | arith_expr

  200 arith_expr: term PLUS arith_expr
  201           | term MINUS arith_expr
  202           | term

  203 term: factor STAR term
  204     | factor AT term
  205     | factor SLASH term
  206     | factor PERCENT term
  207     | factor DOUBLESLASH term
  208     | factor

  209 factor: PLUS factor
  210       | MINUS factor
  211       | TILDE factor
  212       | power

  213 power: atom_expr
  214      | atom_expr DOUBLESTAR factor

  215 atom_expr: opt_await atom trailer_plus
  216          | opt_await atom

  217 atom: LPAR RPAR
  218     | LPAR yield_expr RPAR
  219     | LPAR testlist_comp RPAR
  220     | LSQB RSQB
  221     | LSQB subscriptlist RSQB
  222     | LBRACE RBRACE
  223     | LBRACE dictorsetmaker RBRACE
  224     | NAME
  225     | NUMBER
  226     | STRING
  227     | ELLIPSIS
  228     | NONE
  229     | TRUE
  230     | FALSE

  231 testlist_comp: namedexpr_test comp_for
  232              | testlist

  233 trailer: LPAR RPAR
  234        | LPAR arglist RPAR
  235        | LSQB subscriptlist RSQB
  236        | DOT NAME

  237 subscriptlist: subscript COMMA subscriptlist
  238              | subscript opt_comma

  239 subscript: test
  240          | opt_test COLON opt_test opt_sliceop

  241 sliceop: COLON opt_test

  242 exprlist: expr COMMA exprlist
  243         | expr opt_comma

  244 testlist: test COMMA testlist
  245         | test opt_comma

  246 dictorsetmaker: dictorsetmaker1
  247               | dictorsetmaker2

  248 dictorsetmaker1: test COLON test comp_for
  249                | test COLON test comma_dict1_star opt_comma
  250                | DOUBLESTAR expr comp_for
  251                | DOUBLESTAR expr comma_dict1_star opt_comma

  252 dictorsetmaker2: test comp_for
  253                | test

  254 classdef: CLASS NAME opt_par_arglist COLON suite

  255 arglist: argument1 COMMA arglist
  256        | argument1 opt_comma

  257 argument1: test
  258          | test comp_for
  259          | test COLONEQUAL test
  260          | test EQUAL test
  261          | DOUBLESTAR test
  262          | STAR test

  263 comp_iter: comp_for
  264          | comp_if

  265 sync_comp_for: FOR exprlist IN or_test
  266              | FOR exprlist IN or_test comp_iter

  267 comp_for: sync_comp_for
  268         | ASYNC sync_comp_for

  269 comp_if: IF test_nocond
  270        | IF test_nocond comp_iter

  271 yield_expr: YIELD
  272           | YIELD yield_arg

  273 yield_arg: FROM test
  274          | testlist_star_expr

  275 func_body_suite: simple_stmt
  276                | NEWLINE INDENT stmt_plus DEDENT
  277                | NEWLINE TYPE_COMMENT NEWLINE INDENT stmt_plus DEDENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ENDMARKER (258) 66
    AND (259) 176
    AMPER (260) 195
    AMPEREQUAL (261) 105
    ARROW (262) 10
    AS (263) 27 45
    ASSERT (264) 144
    EQUAL (265) 19 20 21 22 24 25 78 260
    ASYNC (266) 72 154 155 156 268
    AT (267) 67 204
    ATEQUAL (268) 102
    AWAIT (269) 51
    BREAK (270) 119
    CLASS (271) 254
    COLON (272) 16 38 39 41 59 61 62 64 73 97 157 158 159 160 161 162 163 164 165 240 241 248 249 254
    COLONEQUAL (273) 259
    COMMA (274) 14 29 31 35 37 43 59 60 76 237 242 244 255
    CONTINUE (275) 120
    DEDENT (276) 169 276 277
    DEF (277) 73
    DEL (278) 112
    DOT (279) 33 131 236
    DOUBLESLASH (280) 207
    DOUBLESLASHEQUAL (281) 111
    DOUBLESTAR (282) 60 214 250 251 261
    DOUBLESTAREQUAL (283) 110
    EQEQUAL (284) 182
    ELIF (285) 38 39
    ELLIPSIS (286) 132 227
    ELSE (287) 41 159 161 172
    EXCEPT (288) 167
    FALSE (289) 230
    FOR (290) 161 162 265 266
    FINALLY (291) 64 164
    FROM (292) 126 130 273
    GREATEREQUAL (293) 183
    GLOBAL (294) 142
    GREATER (295) 181
    IF (296) 157 158 172 269 270
    IMPORT (297) 129 130
    IN (298) 161 162 186 187 265 266
    INDENT (299) 169 276 277
    IS (300) 188 189
    LAMBDA (301)
    LSQB (302) 220 221 235
    LBRACE (303) 222 223
    LESSEQUAL (304) 184
    LPAR (305) 5 6 74 75 135 217 218 219 233 234
    LEFTSHIFT (306) 197
    LEFTSHIFTEQUAL (307) 108
    LESS (308) 180
    MINUS (309) 201 210
    MINUSEQUAL (310) 100
    NAME (311) 27 33 35 73 80 137 141 142 143 224 236 254
    NOTEQUAL (312) 185
    NEWLINE (313) 2 67 83 169 276 277
    NONE (314) 228
    NONLOCAL (315) 143
    NOT (316) 178 187 189
    NUMBER (317) 225
    OR (318) 174
    VBAR (319) 191
    VBAREQUAL (320) 106
    PASS (321) 113
    PERCENT (322) 206
    PERCENTEQUAL (323) 104
    PLUS (324) 200 209
    PLUSEQUAL (325) 99
    RAISE (326) 124 125 126
    RSQB (327) 220 221 235
    RBRACE (328) 222 223
    RETURN (329) 121 122
    RPAR (330) 5 6 74 75 135 217 218 219 233 234
    RIGHTSHIFT (331) 198
    RIGHTSHIFTEQUAL (332) 109
    SEMICOLON (333) 18
    SLASH (334) 205
    SLASHEQUAL (335) 103
    STAR (336) 134 203 262
    STAREQUAL (337) 101
    STRING (338) 226
    TILDE (339) 211
    TRUE (340) 229
    TRY (341) 163 164
    TYPE_COMMENT (342) 12 277
    WITH (343) 165
    WHILE (344) 159 160
    CIRCUMFLEX (345) 193
    CIRCUMFLEXEQUAL (346) 107
    YIELD (347) 271 272


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    newline_or_stmt_star (94)
        on left: 1 2 3
        on right: 2 3 66
    opt_par_arglist (95)
        on left: 4 5 6
        on right: 67 254
    decorator_plus (96)
        on left: 7 8
        on right: 8 68
    opt_arrow_test (97)
        on left: 9 10
        on right: 73
    opt_type_comment (98)
        on left: 11 12
        on right: 73 96 161 162 165
    opt_comma (99)
        on left: 13 14
        on right: 98 139 238 243 245 249 251 256
    opt_colon_test (100)
        on left: 15 16
        on right: 80
    opt_semi (101)
        on left: 17 18
        on right: 83
    assing_yield_or_test_plus (102)
        on left: 19 20 21 22
        on right: 21 22 96
    opt_assing_yield_or_test (103)
        on left: 23 24 25
        on right: 97
    opt_as_name (104)
        on left: 26 27
        on right: 47 137 138
    comma_import_as_name_star (105)
        on left: 28 29
        on right: 29 139
    comma_dotted_as_name_star (106)
        on left: 30 31
        on right: 31 140
    dot_name_star (107)
        on left: 32 33
        on right: 33 141
    comma_name_star (108)
        on left: 34 35
        on right: 35 142 143
    opt_comma_test (109)
        on left: 36 37
        on right: 144
    elif_test_suite_plus (110)
        on left: 38 39
        on right: 39 157
    opt_else_suite (111)
        on left: 40 41
        on right: 157 158 163
    comma_with_item_star (112)
        on left: 42 43
        on right: 43 165
    opt_as_expr (113)
        on left: 44 45
        on right: 166
    opt_test_as_name (114)
        on left: 46 47
        on right: 167
    stmt_plus (115)
        on left: 48 49
        on right: 49 169 276 277
    opt_await (116)
        on left: 50 51
        on right: 215 216
    trailer_plus (117)
        on left: 52 53
        on right: 53 215
    opt_test (118)
        on left: 54 55
        on right: 240 241
    opt_sliceop (119)
        on left: 56 57
        on right: 240
    comma_dict1_star (120)
        on left: 58 59 60
        on right: 59 60 249 251
    except_suite_plus (121)
        on left: 61 62
        on right: 62 163
    opt_finally_suite (122)
        on left: 63 64
        on right: 163
    program (123)
        on left: 65
        on right: 0
    file_input (124)
        on left: 66
        on right: 65
    decorator (125)
        on left: 67
        on right: 7 8
    decorators (126)
        on left: 68
        on right: 69 70 71
    decorated (127)
        on left: 69 70 71
        on right: 152
    async_funcdef (128)
        on left: 72
        on right: 71
    funcdef (129)
        on left: 73
        on right: 70 72 150 154
    parameters (130)
        on left: 74 75
        on right: 73
    arguments (131)
        on left: 76 77
        on right: 75 76
    argument (132)
        on left: 78 79
        on right: 76 77
    tfpdef (133)
        on left: 80
        on right: 78 79
    stmt (134)
        on left: 81 82
        on right: 3 48 49
    simple_stmt (135)
        on left: 83
        on right: 81 168 275
    small_stmt (136)
        on left: 84 85 86 87 88 89 90 91
        on right: 83
    expr_stmt (137)
        on left: 92 93 94 95 96
        on right: 84
    annassign (138)
        on left: 97
        on right: 92
    testlist_star_expr (139)
        on left: 98
        on right: 20 22 25 92 93 94 95 96 121 274
    augassign (140)
        on left: 99 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 93 94
    del_stmt (141)
        on left: 112
        on right: 85
    pass_stmt (142)
        on left: 113
        on right: 86
    flow_stmt (143)
        on left: 114 115 116 117 118
        on right: 87
    break_stmt (144)
        on left: 119
        on right: 114
    continue_stmt (145)
        on left: 120
        on right: 115
    return_stmt (146)
        on left: 121 122
        on right: 116
    yield_stmt (147)
        on left: 123
        on right: 118
    raise_stmt (148)
        on left: 124 125 126
        on right: 117
    import_stmt (149)
        on left: 127 128
        on right: 88
    import_name (150)
        on left: 129
        on right: 127
    import_from (151)
        on left: 130
        on right: 128
    from_part (152)
        on left: 131 132 133
        on right: 130
    import_part (153)
        on left: 134 135 136
        on right: 130
    import_as_name (154)
        on left: 137
        on right: 29 139
    dotted_as_name (155)
        on left: 138
        on right: 31 140
    import_as_names (156)
        on left: 139
        on right: 135 136
    dotted_as_names (157)
        on left: 140
        on right: 129
    dotted_name (158)
        on left: 141
        on right: 67 133 138
    global_stmt (159)
        on left: 142
        on right: 89
    nonlocal_stmt (160)
        on left: 143
        on right: 90
    assert_stmt (161)
        on left: 144
        on right: 91
    compound_stmt (162)
        on left: 145 146 147 148 149 150 151 152 153
        on right: 82
    async_stmt (163)
        on left: 154 155 156
        on right: 153
    if_stmt (164)
        on left: 157 158
        on right: 145
    while_stmt (165)
        on left: 159 160
        on right: 146
    for_stmt (166)
        on left: 161 162
        on right: 147 156
    try_stmt (167)
        on left: 163 164
        on right: 148
    with_stmt (168)
        on left: 165
        on right: 149 155
    with_item (169)
        on left: 166
        on right: 43 165
    except_clause (170)
        on left: 167
        on right: 61 62
    suite (171)
        on left: 168 169
        on right: 38 39 41 61 62 64 157 158 159 160 161 162 163 164 165 254
    namedexpr_test (172)
        on left: 170
        on right: 38 39 157 158 159 160 231
    test (173)
        on left: 171 172
        on right: 10 16 37 47 55 59 78 97 98 125 126 144 166 170 172 239 244 245 248 249 252 253 257 258 259 260 261 262 273
    test_nocond (174)
        on left: 173
        on right: 269 270
    or_test (175)
        on left: 174 175
        on right: 171 172 173 174 265 266
    and_test (176)
        on left: 176 177
        on right: 174 175 176
    not_test (177)
        on left: 178 179
        on right: 176 177 178
    comparison (178)
        on left: 180 181 182 183 184 185 186 187 188 189 190
        on right: 179 180 181 182 183 184 185 186 187 188 189
    expr (179)
        on left: 191 192
        on right: 45 60 180 181 182 183 184 185 186 187 188 189 190 191 242 243 250 251
    xor_expr (180)
        on left: 193 194
        on right: 191 192 193
    and_expr (181)
        on left: 195 196
        on right: 193 194 195
    shift_expr (182)
        on left: 197 198 199
        on right: 195 196 197 198
    arith_expr (183)
        on left: 200 201 202
        on right: 197 198 199 200 201
    term (184)
        on left: 203 204 205 206 207 208
        on right: 200 201 202 203 204 205 206 207
    factor (185)
        on left: 209 210 211 212
        on right: 203 204 205 206 207 208 209 210 211 214
    power (186)
        on left: 213 214
        on right: 212
    atom_expr (187)
        on left: 215 216
        on right: 213 214
    atom (188)
        on left: 217 218 219 220 221 222 223 224 225 226 227 228 229 230
        on right: 215 216
    testlist_comp (189)
        on left: 231 232
        on right: 219
    trailer (190)
        on left: 233 234 235 236
        on right: 52 53
    subscriptlist (191)
        on left: 237 238
        on right: 221 235 237
    subscript (192)
        on left: 239 240
        on right: 237 238
    sliceop (193)
        on left: 241
        on right: 57
    exprlist (194)
        on left: 242 243
        on right: 112 161 162 242 265 266
    testlist (195)
        on left: 244 245
        on right: 94 161 162 232 244
    dictorsetmaker (196)
        on left: 246 247
        on right: 223
    dictorsetmaker1 (197)
        on left: 248 249 250 251
        on right: 246
    dictorsetmaker2 (198)
        on left: 252 253
        on right: 247
    classdef (199)
        on left: 254
        on right: 69 151
    arglist (200)
        on left: 255 256
        on right: 6 234 255
    argument1 (201)
        on left: 257 258 259 260 261 262
        on right: 255 256
    comp_iter (202)
        on left: 263 264
        on right: 266 270
    sync_comp_for (203)
        on left: 265 266
        on right: 267 268
    comp_for (204)
        on left: 267 268
        on right: 231 248 250 252 258 263
    comp_if (205)
        on left: 269 270
        on right: 264
    yield_expr (206)
        on left: 271 272
        on right: 19 21 24 93 123 218
    yield_arg (207)
        on left: 273 274
        on right: 272
    func_body_suite (208)
        on left: 275 276 277
        on right: 73


State 0

    0 $accept: . program $end

    $default  reduce using rule 1 (newline_or_stmt_star)

    newline_or_stmt_star  go to state 1
    program               go to state 2
    file_input            go to state 3


State 1

    2 newline_or_stmt_star: newline_or_stmt_star . NEWLINE
    3                     | newline_or_stmt_star . stmt
   66 file_input: newline_or_stmt_star . ENDMARKER

    ENDMARKER  shift, and go to state 4
    ASSERT     shift, and go to state 5
    ASYNC      shift, and go to state 6
    AT         shift, and go to state 7
    AWAIT      shift, and go to state 8
    BREAK      shift, and go to state 9
    CLASS      shift, and go to state 10
    CONTINUE   shift, and go to state 11
    DEF        shift, and go to state 12
    DEL        shift, and go to state 13
    FOR        shift, and go to state 14
    FROM       shift, and go to state 15
    GLOBAL     shift, and go to state 16
    IF         shift, and go to state 17
    IMPORT     shift, and go to state 18
    MINUS      shift, and go to state 19
    NEWLINE    shift, and go to state 20
    NONLOCAL   shift, and go to state 21
    NOT        shift, and go to state 22
    PASS       shift, and go to state 23
    PLUS       shift, and go to state 24
    RAISE      shift, and go to state 25
    RETURN     shift, and go to state 26
    TILDE      shift, and go to state 27
    TRY        shift, and go to state 28
    WITH       shift, and go to state 29
    WHILE      shift, and go to state 30
    YIELD      shift, and go to state 31

    $default  reduce using rule 50 (opt_await)

    decorator_plus      go to state 32
    opt_await           go to state 33
    decorator           go to state 34
    decorators          go to state 35
    decorated           go to state 36
    funcdef             go to state 37
    stmt                go to state 38
    simple_stmt         go to state 39
    small_stmt          go to state 40
    expr_stmt           go to state 41
    testlist_star_expr  go to state 42
    del_stmt            go to state 43
    pass_stmt           go to state 44
    flow_stmt           go to state 45
    break_stmt          go to state 46
    continue_stmt       go to state 47
    return_stmt         go to state 48
    yield_stmt          go to state 49
    raise_stmt          go to state 50
    import_stmt         go to state 51
    import_name         go to state 52
    import_from         go to state 53
    global_stmt         go to state 54
    nonlocal_stmt       go to state 55
    assert_stmt         go to state 56
    compound_stmt       go to state 57
    async_stmt          go to state 58
    if_stmt             go to state 59
    while_stmt          go to state 60
    for_stmt            go to state 61
    try_stmt            go to state 62
    with_stmt           go to state 63
    test                go to state 64
    or_test             go to state 65
    and_test            go to state 66
    not_test            go to state 67
    comparison          go to state 68
    expr                go to state 69
    xor_expr            go to state 70
    and_expr            go to state 71
    shift_expr          go to state 72
    arith_expr          go to state 73
    term                go to state 74
    factor              go to state 75
    power               go to state 76
    atom_expr           go to state 77
    classdef            go to state 78
    yield_expr          go to state 79


State 2

    0 $accept: program . $end

    $end  shift, and go to state 80


State 3

   65 program: file_input .

    $default  reduce using rule 65 (program)


State 4

   66 file_input: newline_or_stmt_star ENDMARKER .

    $default  reduce using rule 66 (file_input)


State 5

  144 assert_stmt: ASSERT . test opt_comma_test

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    NOT    shift, and go to state 22
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)

    opt_await   go to state 33
    test        go to state 81
    or_test     go to state 65
    and_test    go to state 66
    not_test    go to state 67
    comparison  go to state 68
    expr        go to state 69
    xor_expr    go to state 70
    and_expr    go to state 71
    shift_expr  go to state 72
    arith_expr  go to state 73
    term        go to state 74
    factor      go to state 75
    power       go to state 76
    atom_expr   go to state 77


State 6

  154 async_stmt: ASYNC . funcdef
  155           | ASYNC . with_stmt
  156           | ASYNC . for_stmt

    DEF   shift, and go to state 12
    FOR   shift, and go to state 14
    WITH  shift, and go to state 29

    funcdef    go to state 82
    for_stmt   go to state 83
    with_stmt  go to state 84


State 7

   67 decorator: AT . dotted_name opt_par_arglist NEWLINE

    NAME  shift, and go to state 85

    dotted_name  go to state 86


State 8

   51 opt_await: AWAIT .

    $default  reduce using rule 51 (opt_await)


State 9

  119 break_stmt: BREAK .

    $default  reduce using rule 119 (break_stmt)


State 10

  254 classdef: CLASS . NAME opt_par_arglist COLON suite

    NAME  shift, and go to state 87


State 11

  120 continue_stmt: CONTINUE .

    $default  reduce using rule 120 (continue_stmt)


State 12

   73 funcdef: DEF . NAME parameters opt_arrow_test COLON opt_type_comment func_body_suite

    NAME  shift, and go to state 88


State 13

  112 del_stmt: DEL . exprlist

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)

    opt_await   go to state 33
    expr        go to state 89
    xor_expr    go to state 70
    and_expr    go to state 71
    shift_expr  go to state 72
    arith_expr  go to state 73
    term        go to state 74
    factor      go to state 75
    power       go to state 76
    atom_expr   go to state 77
    exprlist    go to state 90


State 14

  161 for_stmt: FOR . exprlist IN testlist COLON opt_type_comment suite ELSE COLON suite
  162         | FOR . exprlist IN testlist COLON opt_type_comment suite

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)

    opt_await   go to state 33
    expr        go to state 89
    xor_expr    go to state 70
    and_expr    go to state 71
    shift_expr  go to state 72
    arith_expr  go to state 73
    term        go to state 74
    factor      go to state 75
    power       go to state 76
    atom_expr   go to state 77
    exprlist    go to state 91


State 15

  130 import_from: FROM . from_part IMPORT import_part

    DOT       shift, and go to state 92
    ELLIPSIS  shift, and go to state 93
    NAME      shift, and go to state 85

    from_part    go to state 94
    dotted_name  go to state 95


State 16

  142 global_stmt: GLOBAL . NAME comma_name_star

    NAME  shift, and go to state 96


State 17

  157 if_stmt: IF . namedexpr_test COLON suite elif_test_suite_plus opt_else_suite
  158        | IF . namedexpr_test COLON suite opt_else_suite

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    NOT    shift, and go to state 22
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)

    opt_await       go to state 33
    namedexpr_test  go to state 97
    test            go to state 98
    or_test         go to state 65
    and_test        go to state 66
    not_test        go to state 67
    comparison      go to state 68
    expr            go to state 69
    xor_expr        go to state 70
    and_expr        go to state 71
    shift_expr      go to state 72
    arith_expr      go to state 73
    term            go to state 74
    factor          go to state 75
    power           go to state 76
    atom_expr       go to state 77


State 18

  129 import_name: IMPORT . dotted_as_names

    NAME  shift, and go to state 85

    dotted_as_name   go to state 99
    dotted_as_names  go to state 100
    dotted_name      go to state 101


State 19

  210 factor: MINUS . factor

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)

    opt_await  go to state 33
    factor     go to state 102
    power      go to state 76
    atom_expr  go to state 77


State 20

    2 newline_or_stmt_star: newline_or_stmt_star NEWLINE .

    $default  reduce using rule 2 (newline_or_stmt_star)


State 21

  143 nonlocal_stmt: NONLOCAL . NAME comma_name_star

    NAME  shift, and go to state 103


State 22

  178 not_test: NOT . not_test

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    NOT    shift, and go to state 22
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)

    opt_await   go to state 33
    not_test    go to state 104
    comparison  go to state 68
    expr        go to state 69
    xor_expr    go to state 70
    and_expr    go to state 71
    shift_expr  go to state 72
    arith_expr  go to state 73
    term        go to state 74
    factor      go to state 75
    power       go to state 76
    atom_expr   go to state 77


State 23

  113 pass_stmt: PASS .

    $default  reduce using rule 113 (pass_stmt)


State 24

  209 factor: PLUS . factor

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)

    opt_await  go to state 33
    factor     go to state 105
    power      go to state 76
    atom_expr  go to state 77


State 25

  124 raise_stmt: RAISE .
  125           | RAISE . test
  126           | RAISE . test FROM test

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    NOT    shift, and go to state 22
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    NEWLINE    reduce using rule 124 (raise_stmt)
    SEMICOLON  reduce using rule 124 (raise_stmt)
    $default   reduce using rule 50 (opt_await)

    opt_await   go to state 33
    test        go to state 106
    or_test     go to state 65
    and_test    go to state 66
    not_test    go to state 67
    comparison  go to state 68
    expr        go to state 69
    xor_expr    go to state 70
    and_expr    go to state 71
    shift_expr  go to state 72
    arith_expr  go to state 73
    term        go to state 74
    factor      go to state 75
    power       go to state 76
    atom_expr   go to state 77


State 26

  121 return_stmt: RETURN . testlist_star_expr
  122            | RETURN .

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    NOT    shift, and go to state 22
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    NEWLINE    reduce using rule 122 (return_stmt)
    SEMICOLON  reduce using rule 122 (return_stmt)
    $default   reduce using rule 50 (opt_await)

    opt_await           go to state 33
    testlist_star_expr  go to state 107
    test                go to state 64
    or_test             go to state 65
    and_test            go to state 66
    not_test            go to state 67
    comparison          go to state 68
    expr                go to state 69
    xor_expr            go to state 70
    and_expr            go to state 71
    shift_expr          go to state 72
    arith_expr          go to state 73
    term                go to state 74
    factor              go to state 75
    power               go to state 76
    atom_expr           go to state 77


State 27

  211 factor: TILDE . factor

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)

    opt_await  go to state 33
    factor     go to state 108
    power      go to state 76
    atom_expr  go to state 77


State 28

  163 try_stmt: TRY . COLON suite except_suite_plus opt_else_suite opt_finally_suite
  164         | TRY . COLON suite FINALLY COLON suite

    COLON  shift, and go to state 109


State 29

  165 with_stmt: WITH . with_item comma_with_item_star COLON opt_type_comment suite

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    NOT    shift, and go to state 22
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)
